testsuite/poke.pkl/int-struct-type-diag-17.pk
/* { dg-do compile } */

type Foo =
  struct int<32>
  {
    int a;
    string s; /* { dg-error "invalid field.*\n.*expected integral, offset or integral struct" } */
  };
